--- a/account-deletion.html
+++ b/account-deletion.html
@@ -66,7 +66,7 @@
     <p>You can submit your deletion request via email:</p>
 
     <div class="email-box">
-      ✉️ <strong>Email:</strong> your-email@example.com
+      ✉️ <strong>Email:</strong> studioreas@mail.com
     </div>
 
     <p>
@@ -92,7 +92,7 @@
 
     <p>
       For further questions, please contact us at:
-      <br><a href="mailto:your-email@example.com">your-email@example.com</a>
+      <br><a href="mailto:studioreas@mail.com">studioreas@mail.com</a>
     </p>
   </div>
 </body>
